[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "proxystore"
version = "0.8.1"
authors = [
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
    {name = "Globus Labs"},
]
maintainers = [
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
    {name = "Valerie Hayot-Sasson", email = "vhayot@uchicago.edu"},
]
description = "Advanced data flow management for distributed Python applications"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    # Click 8.1.4 fails mypy: https://github.com/pallets/click/issues/2558
    "click!=8.1.4",
    "cloudpickle>=3",
    "cryptography>=39.0.1",
    "globus-sdk>=3.46.0,<4",
    "pydantic>=2,<3",
    "tomli ; python_version<'3.11'",
    "tomli-w",
    "typing-extensions>=4.3.0 ; python_version<'3.11'",
]

[project.urls]
Homepage = "https://proxystore.dev"
Documentation = "https://docs.proxystore.dev"
Source = "https://github.com/proxystore/proxystore"

[project.optional-dependencies]
all = ["proxystore[endpoints,extensions,kafka,redis,zmq]"]
endpoints = [
    "aiortc>=1.3.2",
    "aiosqlite",
    "uvicorn[standard]",
    "psutil",
    "pystun3",
    "python-daemon",
    "quart>=0.18.0",
    "requests>=2.27.1",
    "websockets>=14",
]
extensions = ["proxystore-ex"]
kafka = ["confluent-kafka"]
redis = ["redis>=3.4"]
zmq = ["pyzmq"]
dev = [
    "covdefaults>=2.2",
    "coverage!=7.6.2",
    "mypy",
    "numpy",
    "pandas",
    "polars",
    "pre-commit",
    "pytest",
    "pytest-asyncio>=0.23.2",
    "pytest-cov",
    "pytest-timeout",
    "ruff>=0.2.0",
    "tox",
    "types-psutil",
    "types-redis",
    "types-requests",
    "virtualenv",
]
docs = [
    "black==24.4.2",
    "mkdocs-click==0.8.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.5.32",
    "mkdocs-section-index==0.3.9",
    "mkdocstrings==0.26.1",
    "mkdocstrings-python==1.11.1",
    "mike==2.1.3",
    # Needed for generating CLI docs
    "proxystore[endpoints]",
]

[project.scripts]
proxystore-endpoint = "proxystore.endpoint.cli:cli"
proxystore-globus-auth = "proxystore.globus.cli:cli"
proxystore-relay = "proxystore.p2p.relay.run:cli"

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info,
docs/publications/index.md,
"""
# These words get caught because they are written as {O}bject in bibtex citations.
ignore-words-list = "pplications,bject"

[tool.coverage.run]
plugins = ["covdefaults"]
concurrency = ["multiprocessing", "thread"]
omit = [
    "proxystore/mypy_plugin.py",
    "testing/scripts/*",
    "version_check.py",
]
parallel = true

[tool.mypy]
python_version = "3.12"
plugins = [
    "mypy.plugins.proper_plugin",
    "proxystore/mypy_plugin.py",
    "pydantic.mypy",
]
check_untyped_defs = true
disable_error_code = "import-untyped"
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "testing.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::proxystore.warnings.ExperimentalWarning",
    "ignore::DeprecationWarning:proxystore.*",
    "ignore::DeprecationWarning:testing.*",
    "ignore::DeprecationWarning:tests.*",
]
markers = [
    "integration: mark a test as an integration test.",
]
timeout = 60

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
# See all rules here: https://beta.ruff.rs/docs/rules
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    # mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-comprehensions
    "C4",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # PyLint
    "PLE", "PLW",
    # ruff-specific
    "RUF",
]
extend-ignore = [
    # Do not require docstrings for magic methods
    "D105",
    # Do not require docstrings for __init__ methods
    "D107",
    # Allow builtin attribute and module shadowing
    "A003", "A005",
    # Ruff will change all([generator]) to all(generator) because the all/any
    # generator expressions directly and the list comprehension is not needed.
    # However, coverage marks unfinished generators as not covered and
    # all/any can early exit before exhausting the generator.
    "C419",
    # Conflicts with ruff format but leaving as enabled for now. This
    # may require ruff's linter to be run a second time after the formatter.
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    # "COM812",
    # "ISC001",
    # Allow pytest.raises() without match
    "PT011",
    #
    "SIM105", "SIM117",
]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["proxystore", "test", "testing"]
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/**.py" = ["D10"]
"proxystore/**.py" = ["PT"]
"proxystore/store/*.py" = ["D102"]
"tests/conftest.py" = ["F401"]
"testing/**.py" = ["D10"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
namespaces = false
