[metadata]
name = proxystore
version = 0.3.1
description = Python lazy object proxy interface for distributed stores.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpauloski/ProxyStore
author = Greg Pauloski
author_email = jgpauloski@uchicago.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    aiortc>=1.3.2
    cloudpickle>=1.6.0
    globus-sdk>=3.3.0
    lazy-object-proxy>=1.6.0
    parsl>=1.0.0
    quart>=0.17.0
    redis>=3.4
    requests>=2.27.1
    websockets>=10.3
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    signaling-server-start = proxystore.p2p.server:main
    endpoint-start = proxystore.endpoint.serve:main

[bdist_wheel]
universal = True

[codespell]
skip =
    .git,
    .github,
    __pycache__,
    build,
    dist,
    .*egg-info,

[coverage:run]
plugins = covdefaults
concurrency = multiprocessing
parallel = true

[flake8]
docstring-convention = google
exclude = .git,.github,__pycache__,build,dist,.*egg-info
per-file-ignores =
    */__init__.py: F401
    */*_test.py: D10
    tests/conftest.py: F401

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[tool:pytest]
asyncio_mode = auto
