[metadata]
name = proxystore
version = 0.4.0a2
description = Python lazy object proxy interface for distributed stores.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/proxystore/proxystore
author = Greg Pauloski
author_email = jgpauloski@uchicago.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    cloudpickle>=1.6.0
    cryptography<=38.04
    globus-sdk>=3.3.0
    lazy-object-proxy>=1.6.0
    redis>=3.4
    requests>=2.27.1
    typing-extensions>=4.3.0
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    signaling-server = proxystore.p2p.server:main
    proxystore-endpoint = proxystore.endpoint.cli:main
    proxystore-globus-auth = proxystore.globus:main

[options.extras_require]
endpoints =
    aiortc>=1.3.2
    hypercorn[uvloop]>=0.13.0
    psutil
    python-daemon
    quart>=0.18.0
    websockets>=10.0

[options.package_data]
* = py.typed

[bdist_wheel]
universal = False

[codespell]
skip =
    .git
    .github
    __pycache__
    build
    dist
    .*egg-info

[coverage:run]
plugins = covdefaults
concurrency = multiprocessing
omit =
    version_check.py
    testing/scripts/*
parallel = true

[flake8]
docstring-convention = google
exclude = .git,.github,__pycache__,build,dist,.*egg-info
extend-ignore = E203
ignore-decorator = overrides
per-file-ignores =
    */__init__.py: F401
    */*_test.py: D10
    proxystore/store/*.py: D102
    tests/conftest.py: F401

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-testing.*]
allow_incomplete_defs = true
allow_untyped_defs = true

[mypy-tests.*]
allow_incomplete_defs = true
allow_untyped_defs = true

[tool:pytest]
asyncio_mode = auto
filterwarnings =
    ignore::cryptography.utils.CryptographyDeprecationWarning
markers =
    integration: mark a test as an integration test.
timeout = 30
